--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact</title>
+  <meta name="description" content="Contact us today for professional services. Get a quote or send us a message.">
+  
+  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -17,31 +20,33 @@
       }
     };
   </script>
+
+  <!-- Fonts & Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
 
   <!-- Header -->
-  <header class="sticky top-0 bg-white shadow z-50">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-      <a href="index.html" class="flex items-center gap-2 hover:opacity-80 transition">
-        <img src="assets/logo.png" alt="Logo" class="h-10 w-auto">
-        <h1 id="company-name" class="text-2xl font-bold text-blue-700">Loading...</h1>
-      </a>
-      <div class="flex items-center space-x-6">
-        <nav class="hidden md:flex space-x-6 text-sm font-semibold">
-          <a href="services.html" class="hover:text-blue-700">Services</a>
-          <a href="projects.html" class="hover:text-blue-700">Projects</a>
-        </nav>
-        <a href="tel:+1234567890" id="company-phone-link" class="hidden md:block font-bold text-blue-700">Call Us</a>
-        <a href="contact.html" class="bg-blue-700 text-white px-4 py-2 rounded shadow hover:bg-blue-800 transition">Get a Quote</a>
-      </div>
+<header class="sticky top-0 bg-blue-950 shadow z-50">
+  <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
+    <a href="index.html" class="flex items-center gap-2 hover:opacity-80 transition">
+      <img src="assets/logoimg.png" alt="Logo" class="h-12 w-auto">
+      <h1 id="company-name" class="text-2xl font-bold text-blue-500">Loading...</h1>
+    </a>
+    <div class="flex items-center space-x-6">
+      <nav class="hidden md:flex space-x-6 text-sm font-semibold text-blue-500">
+        <a href="services.html" class="hover:text-blue-400">Services</a>
+        <a href="projects.html" class="hover:text-blue-400">Projects</a>
+      </nav>
+      <a href="contact.html" class="bg-blue-500 text-white px-4 py-2 rounded shadow hover:bg-blue-600 transition">Get a Quote</a>
     </div>
-  </header>
+  </div>
+</header>
+
 
   <!-- Hero Section -->
-  <section class="bg-blue-700 text-white py-24 text-center">
+  <section class="bg-blue-950 text-white py-24 text-center">
     <div class="max-w-3xl mx-auto px-4">
       <h2 class="text-4xl md:text-5xl font-extrabold mb-4">Contact Us</h2>
       <p class="text-lg md:text-xl">We’d love to hear from you — let’s talk about your project!</p>
@@ -53,28 +58,28 @@
     
     <!-- Contact Form -->
     <div>
-      <h3 class="text-2xl font-bold mb-6">Send Us a Message</h3>
+      <h3 class="text-2xl font-bold mb-6 text-blue-700">Send Us a Message</h3>
       <form id="contact-form" method="POST" class="bg-white shadow rounded-lg p-6 space-y-4">
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_next" value="thankyou.html">
 
         <div>
-          <label class="block text-sm font-medium mb-1">Name</label>
-          <input type="text" name="name" required 
-            class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-700">
+          <label for="name" class="block text-sm font-medium mb-1">Name</label>
+          <input id="name" type="text" name="name" required autocomplete="name"
+            class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-700 focus:outline-none">
         </div>
         <div>
-          <label class="block text-sm font-medium mb-1">Email</label>
-          <input type="email" name="email" required 
-            class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-700">
+          <label for="email" class="block text-sm font-medium mb-1">Email</label>
+          <input id="email" type="email" name="email" required autocomplete="email"
+            class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-700 focus:outline-none">
         </div>
         <div>
-          <label class="block text-sm font-medium mb-1">Message</label>
-          <textarea name="message" rows="5" required 
-            class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-700"></textarea>
+          <label for="message" class="block text-sm font-medium mb-1">Message</label>
+          <textarea id="message" name="message" rows="5" required autocomplete="off"
+            class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-700 focus:outline-none"></textarea>
         </div>
         <button type="submit" 
-          class="w-full bg-blue-700 text-white py-3 px-4 rounded-lg font-semibold hover:bg-blue-800 transition">
+          class="w-full bg-blue-700 text-white py-3 px-4 rounded-lg font-semibold hover:bg-blue-800 transition focus:ring-2 focus:ring-offset-2 focus:ring-blue-700">
           Send Message
         </button>
       </form>
@@ -82,7 +87,7 @@
 
     <!-- Contact Info -->
     <div class="space-y-6">
-      <h3 class="text-2xl font-bold mb-6">Contact Information</h3>
+      <h3 class="text-2xl font-bold mb-6 text-blue-700">Contact Information</h3>
       <p class="text-gray-600">Reach us directly through phone, email, or visit our office.</p>
 
       <div class="flex items-center space-x-4">
