--- a/index.html
+++ b/index.html
@@ -24,27 +24,25 @@
 
 
   <!-- Header -->
-<header class="sticky top-0 bg-white shadow z-50">
+<header class="sticky top-0 bg-blue-950 shadow z-50">
   <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
     <a href="index.html" class="flex items-center gap-2 hover:opacity-80 transition">
-      <img src="assets/logo.png" alt="Logo" class="h-10 w-auto">
-      <h1 id="company-name" class="text-2xl font-bold text-blue-700">Loading...</h1>
+      <img src="assets/logoimg.png" alt="Logo" class="h-12 w-auto">
+      <h1 id="company-name" class="text-2xl font-bold text-blue-500">Loading...</h1>
     </a>
     <div class="flex items-center space-x-6">
-      <nav class="hidden md:flex space-x-6 text-sm font-semibold">
-        <a href="services.html" class="hover:text-blue-700">Services</a>
-        <a href="projects.html" class="hover:text-blue-700">Projects</a>
+      <nav class="hidden md:flex space-x-6 text-sm font-semibold text-blue-500">
+        <a href="services.html" class="hover:text-blue-400">Services</a>
+        <a href="projects.html" class="hover:text-blue-400">Projects</a>
       </nav>
-      <a href="tel:+1234567890" class="hidden md:block font-bold text-blue-700">Call Us</a>
-      <a href="contact.html" class="bg-blue-700 text-white px-4 py-2 rounded shadow hover:bg-blue-800 transition">Get a Quote</a>
+      <a href="contact.html" class="bg-blue-500 text-white px-4 py-2 rounded shadow hover:bg-blue-600 transition">Get a Quote</a>
     </div>
   </div>
 </header>
 
 
   <!-- Hero Section -->
-  <section class="bg-[url('https://images.unsplash.com/photo-1581091870622-c6a8f8c1b351')] bg-cover bg-center text-white text-center py-36 relative">
-    <div class="bg-black/60 absolute inset-0"></div>
+  <section class="bg-blue-950 text-white py-24 text-center">
     <div class="relative z-10 max-w-3xl mx-auto px-4">
       <h2 id="tagline" class="text-4xl md:text-5xl font-extrabold mb-4">Loading...</h2>
       <p class="text-lg md:text-xl mb-6">Residential & Commercial Construction Experts</p>
@@ -53,7 +51,7 @@
   </section>
 
   <!-- Services Section -->
-  <section id="services" class="py-20 bg-white">
+  <section id="services" class="py-20 bg-blue-50">
     <div class="max-w-6xl mx-auto px-4 text-center">
       <h3 class="text-3xl font-bold mb-12">What We Offer</h3>
        <div id="services-container" class="grid md:grid-cols-3 gap-10 text-left">
@@ -63,7 +61,7 @@
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="py-20 bg-gray-50">
+  <section id="projects" class="py-20 bg-blue-950 text-white ">
     <div class="max-w-6xl mx-auto px-4 text-center">
       <h3 class="text-3xl font-bold mb-12">Featured Projects</h3>
       <div id="projects-container" class="grid md:grid-cols-3 gap-8">
@@ -73,7 +71,7 @@
   </section>
 
   <!-- Contact CTA -->
-  <section id="contact" class="py-20 bg-blue-700 text-white text-center">
+  <section id="contact" class="py-20 bg-blue-100 text-black text-center">
     <div class="max-w-xl mx-auto px-4">
       <h3 class="text-3xl font-bold mb-4">Let’s Build Your Vision Together</h3>
       <p class="mb-6">Contact us for a consultation or quote — we’re here to help with your next project.</p>
@@ -137,7 +135,7 @@
       const projectContainer = document.getElementById('projects-container');
       projectsData.projects.forEach(project => {
         const div = document.createElement('div');
-        div.className = "bg-white shadow rounded overflow-hidden";
+        div.className = "bg-gray-300 shadow rounded overflow-hidden text-black";
         div.innerHTML = `
           <img src="${project.image}" alt="${project.title}" class="w-full h-48 object-cover">
           <div class="p-4">
