--- a/projects.html
+++ b/projects.html
@@ -21,27 +21,26 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
-
   <!-- Header -->
-  <header class="sticky top-0 bg-white shadow z-50">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-      <a href="index.html" class="flex items-center gap-2 hover:opacity-80 transition">
-        <img src="assets/logo.png" alt="Logo" class="h-10 w-auto">
-        <h1 id="company-name" class="text-2xl font-bold text-blue-700">Loading...</h1>
-      </a>
-      <div class="flex items-center space-x-6">
-        <nav class="hidden md:flex space-x-6 text-sm font-semibold">
-          <a href="services.html" class="hover:text-blue-700">Services</a>
-          <a href="projects.html" class="text-blue-700 font-semibold">Projects</a>
-        </nav>
-        <a href="tel:+1234567890" id="company-phone-link" class="hidden md:block font-bold text-blue-700">Call Us</a>
-        <a href="contact.html" class="bg-blue-700 text-white px-4 py-2 rounded shadow hover:bg-blue-800 transition">Get a Quote</a>
-      </div>
+<header class="sticky top-0 bg-blue-950 shadow z-50">
+  <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
+    <a href="index.html" class="flex items-center gap-2 hover:opacity-80 transition">
+      <img src="assets/logoimg.png" alt="Logo" class="h-12 w-auto">
+      <h1 id="company-name" class="text-2xl font-bold text-blue-500">Loading...</h1>
+    </a>
+    <div class="flex items-center space-x-6">
+      <nav class="hidden md:flex space-x-6 text-sm font-semibold text-blue-500">
+        <a href="services.html" class="hover:text-blue-400">Services</a>
+        <a href="projects.html" class="hover:text-blue-400">Projects</a>
+      </nav>
+      <a href="contact.html" class="bg-blue-500 text-white px-4 py-2 rounded shadow hover:bg-blue-600 transition">Get a Quote</a>
     </div>
-  </header>
+  </div>
+</header>
+
 
   <!-- Hero Section -->
-  <section class="bg-blue-700 text-white py-24 text-center">
+  <section class="bg-blue-950 text-white py-24 text-center">
     <div class="max-w-3xl mx-auto px-4">
       <h2 class="text-4xl md:text-5xl font-extrabold mb-4">Our Projects</h2>
       <p class="text-lg md:text-xl">Explore our commercial and residential work.</p>
@@ -51,7 +50,7 @@
   <!-- Commercial Projects -->
   <section id="commercialProjects" class="py-20 bg-white">
     <div class="max-w-6xl mx-auto px-4 text-center">
-      <h3 class="text-3xl font-bold mb-12">Commercial Projects</h3>
+      <h3 class="text-3xl font-bold mb-12 text-blue-950">Commercial Projects</h3>
       <div id="commercial-container" class="grid md:grid-cols-3 gap-8">
         <!-- Projects will load here -->
       </div>
@@ -61,7 +60,7 @@
   <!-- Residential Projects -->
   <section id="residentialProjects" class="py-20 bg-gray-50">
     <div class="max-w-6xl mx-auto px-4 text-center">
-      <h3 class="text-3xl font-bold mb-12">Residential Projects</h3>
+      <h3 class="text-3xl font-bold mb-12 text-blue-950">Residential Projects</h3>
       <div id="residential-container" class="grid md:grid-cols-3 gap-8">
         <!-- Projects will load here -->
       </div>
@@ -87,14 +86,12 @@
         // Company info
         document.getElementById('company-name').innerText = companyData.name;
         document.getElementById('company-name-footer').innerText = companyData.name;
-        document.getElementById('company-phone-link').href = `tel:${companyData.phone}`;
 
         // Projects
         projectsData.projects.forEach(project => {
           const containerId = project.type === "Commercial" ? 'commercial-container' : 'residential-container';
           const container = document.getElementById(containerId);
 
-          // Support image as string or array
           const image = Array.isArray(project.image) ? project.image[0] : project.image;
 
           const div = document.createElement('div');
@@ -102,9 +99,9 @@
 
           div.innerHTML = `
             <a href="project.html?id=${project.id}" class="block">
-              <img src="${image}" alt="${project.title}" class="w-full h-48 object-cover">
+              <img src="${image}" alt="${project.title}" loading="lazy" class="w-full h-48 object-cover">
               <div class="p-4 text-left">
-                <h4 class="font-semibold text-lg mb-2">${project.title}</h4>
+                <h4 class="font-semibold text-lg mb-2 text-blue-700">${project.title}</h4>
                 <p class="text-sm text-gray-600">${project.description}</p>
               </div>
             </a>
