--- a/services.html
+++ b/services.html
@@ -23,25 +23,25 @@
 <body class="bg-gray-50 text-gray-800 font-sans">
 
   <!-- Header -->
-  <header class="sticky top-0 bg-white shadow z-50">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-      <a href="index.html" class="flex items-center gap-2 hover:opacity-80 transition">
-        <img src="assets/logo.png" alt="Logo" class="h-10 w-auto">
-        <h1 id="company-name" class="text-2xl font-bold text-blue-700">Loading...</h1>
-      </a>
-      <div class="flex items-center space-x-6">
-        <nav class="hidden md:flex space-x-6 text-sm font-semibold">
-          <a href="services.html" class="text-blue-700 font-semibold">Services</a>
-          <a href="projects.html" class="hover:text-blue-700">Projects</a>
-        </nav>
-        <a href="tel:+1234567890" id="company-phone-link" class="hidden md:block font-bold text-blue-700">Call Us</a>
-        <a href="contact.html" class="bg-blue-700 text-white px-4 py-2 rounded shadow hover:bg-blue-800 transition">Get a Quote</a>
-      </div>
+<header class="sticky top-0 bg-blue-950 shadow z-50">
+  <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
+    <a href="index.html" class="flex items-center gap-2 hover:opacity-80 transition">
+      <img src="assets/logoimg.png" alt="Logo" class="h-12 w-auto">
+      <h1 id="company-name" class="text-2xl font-bold text-blue-500">Loading...</h1>
+    </a>
+    <div class="flex items-center space-x-6">
+      <nav class="hidden md:flex space-x-6 text-sm font-semibold text-blue-500">
+        <a href="services.html" class="hover:text-blue-400">Services</a>
+        <a href="projects.html" class="hover:text-blue-400">Projects</a>
+      </nav>
+      <a href="contact.html" class="bg-blue-500 text-white px-4 py-2 rounded shadow hover:bg-blue-600 transition">Get a Quote</a>
     </div>
-  </header>
+  </div>
+</header>
+
 
   <!-- Hero Section -->
-  <section class="bg-blue-700 text-white py-24 text-center">
+  <section class="bg-blue-950 text-white py-24 text-center">
     <div class="max-w-3xl mx-auto px-4">
       <h2 class="text-4xl md:text-5xl font-extrabold mb-4">Our Services</h2>
       <p class="text-lg md:text-xl">Comprehensive solutions for residential and commercial projects.</p>
@@ -51,7 +51,7 @@
   <!-- Services Section -->
   <section id="services" class="py-20 bg-white">
     <div class="max-w-6xl mx-auto px-4 text-center">
-      <h3 class="text-3xl font-bold mb-12">What We Offer</h3>
+      <h3 class="text-3xl font-bold mb-12 text-blue-950">What We Offer</h3>
       <div id="services-container" class="grid md:grid-cols-2 gap-10 text-left">
         <!-- Services will load here -->
       </div>
@@ -77,7 +77,6 @@
         // Company info
         document.getElementById('company-name').innerText = companyData.name;
         document.getElementById('company-name-footer').innerText = companyData.name;
-        document.getElementById('company-phone-link').href = `tel:${companyData.phone}`;
 
         // Services
         const serviceContainer = document.getElementById('services-container');
@@ -89,7 +88,7 @@
             <div class="text-blue-700 mb-4">
               <i class="${service.icon || 'fa-solid fa-briefcase'} text-3xl"></i>
             </div>
-            <h4 class="text-xl font-semibold mb-2">${service.title}</h4>
+            <h4 class="text-xl font-semibold mb-2 text-blue-700">${service.title}</h4>
             <p class="text-gray-600">${service.longDescription}</p>
           `;
 
