--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </section> -->
 
   <!-- Contact CTA -->
-  <section id="contact" class="py-20 bg-blue-100 text-black text-center">
+  <section id="contact" class="py-20 bg-[#273038] text-white text-center">
     <div class="max-w-xl mx-auto px-4">
       <h3 class="text-3xl font-bold mb-4">Let’s Build Your Vision Together</h3>
       <p class="mb-6">Contact us for a consultation or quote — we’re here to help with your next project.</p>
